--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "grammy": "^1.16.2",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
